modules/lib/dependencies/openh264/cobalt_h264_shim.h

/**
 * Reconfigures the live encoder's bitrate and frame rate without recreating the
 * encoder.
 *
 * The wrapper drives the encoder vtable SetOption slot twice: once with
 * ENCODER_OPTION_BITRATE and a C-side SBitrateInfo targeting all spatial layers
 * (SPATIAL_LAYER_ALL) carrying targetBitrateBps, then once with
 * ENCODER_OPTION_FRAME_RATE and a C-side float carrying frameRate. These are the
 * two knobs openh264 accepts on a live encoder; changing the quantizer window,
 * frame skip, or the IDR bitrate ratio requires recreating the encoder and is
 * not done here.
 *
 * @param ctx              the encoder handle from cobalt_h264_encoder_create.
 * @param targetBitrateBps the new target bitrate in bits per second.
 * @param frameRate        the new maximum frame rate in frames per second.
 * @return COBALT_H264_OK on success, COBALT_H264_BAD_PARAM for a NULL ctx,
 *         COBALT_H264_NATIVE_ERROR if either SetOption call fails.
 */
int32_t cobalt_h264_encoder_set_rates(void *ctx,
                                      int32_t targetBitrateBps,
                                      int32_t frameRate);
/**
 * Forces the encoder's next encoded picture to be an IDR (instantaneous decoder
 * refresh) key frame.
 *
 * The wrapper drives the encoder vtable ForceIntraFrame slot with a true flag.
 * The request is one-shot: it affects only the next cobalt_h264_encoder_encode
 * call. openh264's ForceIntraFrame returns 1 (not 0) when bIDR is false and
 * nothing is done; the shim only ever passes true, so any non-zero return is a
 * genuine failure.
 *
 * @param ctx the encoder handle from cobalt_h264_encoder_create.
 * @return COBALT_H264_OK on success, COBALT_H264_BAD_PARAM for a NULL ctx,
 *         COBALT_H264_NATIVE_ERROR if ForceIntraFrame fails.
 */
int32_t cobalt_h264_encoder_force_idr(void *ctx);
/**
 * Encodes one planar I420 picture.
 *
 * The wrapper points the handle's reusable C-side SSourcePicture at the supplied
 * planar I420 buffer (an I420 color format, the three plane offsets at the luma
 * and the two quarter-resolution chroma planes, the width and width/2 plane
 * strides, and the supplied millisecond timestamp), zeroes the handle's
 * SFrameBSInfo, and drives the encoder vtable EncodeFrame slot. The pixel buffer
 * is read synchronously and need not outlive this call. The compressed access
 * unit is retrieved afterwards with cobalt_h264_encoder_get_packet; this call
 * does not concatenate it.
 *
 * @param ctx  the encoder handle from cobalt_h264_encoder_create.
 * @param i420 the planar I420 pixel buffer (Y plane, then U, then V).
 * @param len  the length of i420 in bytes; must hold a full I420 picture of the
 *             configured geometry.
 * @param width  the picture width in pixels; must equal the configured geometry.
 * @param height the picture height in pixels; must equal the configured geometry.
 * @param ptsMillis the source timestamp in milliseconds stamped on the picture.
 * @return COBALT_H264_OK on success, COBALT_H264_BAD_PARAM for a NULL ctx or
 *         buffer or a too-small len, COBALT_H264_NATIVE_ERROR if EncodeFrame
 *         fails.
 */
int32_t cobalt_h264_encoder_encode(void *ctx,
                                   const uint8_t *i420,
                                   size_t len,
                                   int32_t width,
                                   int32_t height,
                                   int64_t ptsMillis);
/**
 * Retrieves the compressed access unit produced by the most recent
 * cobalt_h264_encoder_encode call as one contiguous buffer.
 *
 * The wrapper walks the iLayerNum layers of the handle's filled SFrameBSInfo,
 * sums each layer's pNalLengthInByte entries, and concatenates every layer's
 * pBsBuf bitstream (the payloads already carry Annex-B start codes) into the
 * handle's growable concatenation buffer, returning a pointer to it through
 * outBuf, its total length through outLen, and whether SFrameBSInfo.eFrameType is
 * videoFrameTypeIDR through outIsKeyframe. The returned pointer addresses
 * shim-owned memory valid only until the next cobalt_h264_encoder_encode call on
 * this handle, so the caller must copy the bytes out immediately. When the
 * encoder skipped the frame, no NALs are present: outBuf is left NULL, outLen is
 * set to 0, and outIsKeyframe to 0.
 *
 * @param ctx           the encoder handle from cobalt_h264_encoder_create.
 * @param outBuf        receives the concatenated-bytes pointer, or NULL when the
 *                      frame was skipped; must not be NULL.
 * @param outLen        receives the total length in bytes, or 0 when skipped;
 *                      must not be NULL.
 * @param outIsKeyframe receives 1 when the access unit is an IDR key frame,
 *                      otherwise 0; must not be NULL.
 * @return COBALT_H264_OK on success, COBALT_H264_BAD_PARAM for a NULL argument,
 *         COBALT_H264_NOMEM if the concatenation buffer could not be grown.
 */
int32_t cobalt_h264_encoder_get_packet(void *ctx,
                                       const uint8_t **outBuf,
                                       int32_t *outLen,
                                       int32_t *outIsKeyframe);
/**
 * Uninitializes and destroys an encoder created by cobalt_h264_encoder_create
 * and frees its handle.
 *
 * The wrapper drives the encoder vtable Uninitialize slot, calls
 * WelsDestroySVCEncoder on the C++ object, frees the handle's concatenation
 * buffer, and frees the handle. Must be called at most once per handle. A NULL
 * handle is ignored and reported as success.
 *
 * @param ctx the encoder handle, or NULL.
 * @return COBALT_H264_OK on success.
 */
int32_t cobalt_h264_encoder_destroy(void *ctx);
/**
 * Creates an openh264 decoder, initializing it with default decoding parameters.
 *
 * The wrapper calls WelsCreateDecoder, zero-initializes a C-side SDecodingParam
 * (the default decode-only configuration the calls path uses), and drives the
 * decoder vtable Initialize slot with it. The created decoder is returned through
 * outCtx as an opaque handle.
 *
 * @param outCtx receives the created decoder handle on success, or is left
 *               holding NULL on failure; must not be NULL.
 * @return COBALT_H264_OK on success, COBALT_H264_BAD_PARAM for a NULL outCtx,
 *         COBALT_H264_NOMEM if the handle could not be allocated,
 *         COBALT_H264_CREATE_FAIL if WelsCreateDecoder fails or returns null,
 *         COBALT_H264_NATIVE_ERROR if Initialize fails.
 */
int32_t cobalt_h264_decoder_create(void **outCtx);
/**
 * Feeds one compressed access unit to the decoder and reconstructs it.
 *
 * The wrapper zeroes the handle's reusable C-side SBufferInfo and its three-entry
 * plane-pointer array, then drives the decoder vtable DecodeFrameNoDelay slot
 * with the supplied bytes; openh264 parses and reconstructs a complete frame
 * immediately. A decoded picture became available only when DecodeFrameNoDelay
 * succeeded AND the SBufferInfo iBufferStatus is 1; that picture is retrieved
 * afterwards with cobalt_h264_decoder_get_frame. When iBufferStatus is 0 the
 * input was consumed but produced no displayable frame yet, which the get-frame
 * call reports as no picture ready.
 *
 * @param ctx  the decoder handle from cobalt_h264_decoder_create.
 * @param data the compressed access-unit bytes, including Annex-B start codes.
 * @param len  the length of data in bytes.
 * @return COBALT_H264_OK on success (including when no frame is ready),
 *         COBALT_H264_BAD_PARAM for a NULL ctx or buffer,
 *         COBALT_H264_NATIVE_ERROR if DecodeFrameNoDelay reports a decode error.
 */
int32_t cobalt_h264_decoder_decode(void *ctx, const uint8_t *data, size_t len);