modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/video/codec/h264/bindings/CobaltOpenH264.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_set_rates(void *ctx, int32_t targetBitrateBps, int32_t frameRate)
     * }
     */
    public static FunctionDescriptor cobalt_h264_encoder_set_rates$descriptor() {
        return cobalt_h264_encoder_set_rates.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_set_rates(void *ctx, int32_t targetBitrateBps, int32_t frameRate)
     * }
     */
    public static MethodHandle cobalt_h264_encoder_set_rates$handle() {
        return cobalt_h264_encoder_set_rates.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_set_rates(void *ctx, int32_t targetBitrateBps, int32_t frameRate)
     * }
     */
    public static MemorySegment cobalt_h264_encoder_set_rates$address() {
        return cobalt_h264_encoder_set_rates.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_set_rates(void *ctx, int32_t targetBitrateBps, int32_t frameRate)
     * }
     */
    public static int cobalt_h264_encoder_set_rates(MemorySegment ctx, int targetBitrateBps, int frameRate) {
        var mh$ = cobalt_h264_encoder_set_rates.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_encoder_set_rates", ctx, targetBitrateBps, frameRate);
            }
            return (int)mh$.invokeExact(ctx, targetBitrateBps, frameRate);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_encoder_force_idr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_encoder_force_idr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_force_idr(void *ctx)
     * }
     */
    public static FunctionDescriptor cobalt_h264_encoder_force_idr$descriptor() {
        return cobalt_h264_encoder_force_idr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_force_idr(void *ctx)
     * }
     */
    public static MethodHandle cobalt_h264_encoder_force_idr$handle() {
        return cobalt_h264_encoder_force_idr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_force_idr(void *ctx)
     * }
     */
    public static MemorySegment cobalt_h264_encoder_force_idr$address() {
        return cobalt_h264_encoder_force_idr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_force_idr(void *ctx)
     * }
     */
    public static int cobalt_h264_encoder_force_idr(MemorySegment ctx) {
        var mh$ = cobalt_h264_encoder_force_idr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_encoder_force_idr", ctx);
            }
            return (int)mh$.invokeExact(ctx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_encoder_encode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_LONG,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_LONG
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_encoder_encode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_encode(void *ctx, const uint8_t *i420, size_t len, int32_t width, int32_t height, int64_t ptsMillis)
     * }
     */
    public static FunctionDescriptor cobalt_h264_encoder_encode$descriptor() {
        return cobalt_h264_encoder_encode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_encode(void *ctx, const uint8_t *i420, size_t len, int32_t width, int32_t height, int64_t ptsMillis)
     * }
     */
    public static MethodHandle cobalt_h264_encoder_encode$handle() {
        return cobalt_h264_encoder_encode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_encode(void *ctx, const uint8_t *i420, size_t len, int32_t width, int32_t height, int64_t ptsMillis)
     * }
     */
    public static MemorySegment cobalt_h264_encoder_encode$address() {
        return cobalt_h264_encoder_encode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_encode(void *ctx, const uint8_t *i420, size_t len, int32_t width, int32_t height, int64_t ptsMillis)
     * }
     */
    public static int cobalt_h264_encoder_encode(MemorySegment ctx, MemorySegment i420, long len, int width, int height, long ptsMillis) {
        var mh$ = cobalt_h264_encoder_encode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_encoder_encode", ctx, i420, len, width, height, ptsMillis);
            }
            return (int)mh$.invokeExact(ctx, i420, len, width, height, ptsMillis);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_encoder_get_packet {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_encoder_get_packet");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_get_packet(void *ctx, const uint8_t **outBuf, int32_t *outLen, int32_t *outIsKeyframe)
     * }
     */
    public static FunctionDescriptor cobalt_h264_encoder_get_packet$descriptor() {
        return cobalt_h264_encoder_get_packet.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_get_packet(void *ctx, const uint8_t **outBuf, int32_t *outLen, int32_t *outIsKeyframe)
     * }
     */
    public static MethodHandle cobalt_h264_encoder_get_packet$handle() {
        return cobalt_h264_encoder_get_packet.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_get_packet(void *ctx, const uint8_t **outBuf, int32_t *outLen, int32_t *outIsKeyframe)
     * }
     */
    public static MemorySegment cobalt_h264_encoder_get_packet$address() {
        return cobalt_h264_encoder_get_packet.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_get_packet(void *ctx, const uint8_t **outBuf, int32_t *outLen, int32_t *outIsKeyframe)
     * }
     */
    public static int cobalt_h264_encoder_get_packet(MemorySegment ctx, MemorySegment outBuf, MemorySegment outLen, MemorySegment outIsKeyframe) {
        var mh$ = cobalt_h264_encoder_get_packet.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_encoder_get_packet", ctx, outBuf, outLen, outIsKeyframe);
            }
            return (int)mh$.invokeExact(ctx, outBuf, outLen, outIsKeyframe);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_encoder_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_encoder_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_destroy(void *ctx)
     * }
     */
    public static FunctionDescriptor cobalt_h264_encoder_destroy$descriptor() {
        return cobalt_h264_encoder_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_destroy(void *ctx)
     * }
     */
    public static MethodHandle cobalt_h264_encoder_destroy$handle() {
        return cobalt_h264_encoder_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_destroy(void *ctx)
     * }
     */
    public static MemorySegment cobalt_h264_encoder_destroy$address() {
        return cobalt_h264_encoder_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_destroy(void *ctx)
     * }
     */
    public static int cobalt_h264_encoder_destroy(MemorySegment ctx) {
        var mh$ = cobalt_h264_encoder_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_encoder_destroy", ctx);
            }
            return (int)mh$.invokeExact(ctx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_decoder_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_decoder_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_create(void **outCtx)
     * }
     */
    public static FunctionDescriptor cobalt_h264_decoder_create$descriptor() {
        return cobalt_h264_decoder_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_create(void **outCtx)
     * }
     */
    public static MethodHandle cobalt_h264_decoder_create$handle() {
        return cobalt_h264_decoder_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_create(void **outCtx)
     * }
     */
    public static MemorySegment cobalt_h264_decoder_create$address() {
        return cobalt_h264_decoder_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_create(void **outCtx)
     * }
     */
    public static int cobalt_h264_decoder_create(MemorySegment outCtx) {
        var mh$ = cobalt_h264_decoder_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_decoder_create", outCtx);
            }
            return (int)mh$.invokeExact(outCtx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_decoder_decode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_LONG
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_decoder_decode");
